--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "metadata"
   ],
   "author": "Andreas Lind <andreas@one.com>",
-  "license": "BSD",
+  "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/unexpectedjs/unexpected-exif/issues"
   },
