Make magicpen-media a peer dependency as well as a dependency (for compatibility with npm 3).

--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "EXIF plugin for the Unexpected assertion library",
   "main": "lib/unexpectedExif.js",
   "dependencies": {
-    "exif-parser": "0.1.7"
+    "exif-parser": "0.1.7",
+    "magicpen-media": "^1.5.0"
   },
   "peerDependencies": {
-    "unexpected": "^9.2.0"
+    "unexpected": "^9.2.0",
+    "magicpen-media": "^1.5.0"
   },
   "devDependencies": {
     "coveralls": "2.11.2",
     "istanbul": "0.3.13",
     "jshint": "2.6.3",
-    "magicpen-media": "1.5.0",
     "minimist": "1.1.1",
     "mocha": "2.2.5",
     "unexpected": "9.2.0",
