--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "minimist": "1.1.1",
     "mocha": "2.2.5",
     "unexpected": "10.0.0",
-    "unexpected-documentation-site-generator": "2.5.2"
+    "unexpected-documentation-site-generator": "3.1.0"
   },
   "scripts": {
     "lint": "jshint .",
@@ -27,7 +27,7 @@
     "coverage": "NODE_ENV=development istanbul cover _mocha --report text --report lcov -- --reporter dot && echo google-chrome coverage/lcov-report/index.html",
     "generate-site": "node ./generate-site.js && cp magic-pen-6-colours.jpg site-build && cp magic-pen-6-colours.jpg site-build/assertions/string/to-have-EXIF-data-satisfying/ && cp magic-pen-6-colours.jpg site-build/assertions/Buffer/to-have-EXIF-data-satisfying/",
     "update-examples": "node ./generate-site.js --update-examples && npm run generate-site",
-    "deploy-site": "deploy-site"
+    "deploy-site": "deploy-site.sh"
   },
   "repository": {
     "type": "git",
