--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "minimist": "1.1.1",
     "mocha": "2.3.3",
     "unexpected": "10.0.0",
-    "unexpected-documentation-site-generator": "3.1.0"
+    "unexpected-documentation-site-generator": "^4.0.0",
+    "unexpected-markdown": "^1.3.4"
   },
   "scripts": {
     "lint": "jshint .",
-    "test": "mocha && npm run lint",
+    "test": "mocha ./documentation/**/*.md ./test/**/*.js && npm run lint",
     "travis": "npm test && npm run coverage && (<coverage/lcov.info coveralls || true) && npm run generate-site",
     "coverage": "NODE_ENV=development istanbul cover _mocha --report text --report lcov -- --reporter dot && echo google-chrome coverage/lcov-report/index.html",
-    "generate-site": "node ./generate-site.js && cp magic-pen-6-colours.jpg site-build && cp magic-pen-6-colours.jpg site-build/assertions/string/to-have-EXIF-data-satisfying/ && cp magic-pen-6-colours.jpg site-build/assertions/Buffer/to-have-EXIF-data-satisfying/",
-    "update-examples": "node ./generate-site.js --update-examples && npm run generate-site",
+    "generate-site": "generate-site --require ./bootstrap-unexpected-markdown.js && cp magic-pen-6-colours.jpg site-build && cp magic-pen-6-colours.jpg site-build/assertions/string/to-have-EXIF-data-satisfying/ && cp magic-pen-6-colours.jpg site-build/assertions/Buffer/to-have-EXIF-data-satisfying/",
+    "update-examples": "generate-site --require ./bootstrap-unexpected-markdown.js --update-examples",
     "deploy-site": "deploy-site.sh"
   },
   "repository": {
