--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "exif data",
     "metadata"
   ],
-  "author": "Andreas Lind <andreas@one.com>",
+  "author": "Andreas Lind <andreaslindpetersen@gmail.com>",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/unexpectedjs/unexpected-exif/issues"
