--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "magicpen-media": "^1.5.0"
   },
   "devDependencies": {
-    "coveralls": "3.0.0",
-    "eslint": "4.19.1",
-    "eslint-config-onelint": "3.0.0",
-    "istanbul": "0.4.5",
-    "minimist": "1.2.0",
-    "mocha": "2.3.3",
-    "unexpected": "10.0.0",
+    "coveralls": "^3.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-onelint": "^3.0.0",
+    "istanbul": "^0.4.5",
+    "minimist": "^1.2.0",
+    "mocha": "^2.3.3",
+    "unexpected": "^10.0.0",
     "unexpected-documentation-site-generator": "^4.0.0",
     "unexpected-markdown": "^1.3.4"
   },
