Allow the next major version of unexpected

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "magicpen-media": "^1.5.0"
   },
   "peerDependencies": {
-    "unexpected": "^10.0.0",
+    "unexpected": "^10.0.0 || ^11.0.0-4",
     "magicpen-media": "^1.5.0"
   },
   "devDependencies": {
@@ -18,7 +18,7 @@
     "istanbul": "^0.4.5",
     "minimist": "^1.2.0",
     "mocha": "^5.1.0",
-    "unexpected": "^10.37.4",
+    "unexpected": "^11.0.0-4",
     "unexpected-documentation-site-generator": "^5.0.0",
     "unexpected-markdown": "^2.0.0"
   },
