--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "devDependencies": {
     "coveralls": "^3.0.0",
     "eslint": "^5.12.0",
-    "eslint-config-onelint": "^4.0.0",
+    "eslint-config-pretty-standard": "^2.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "istanbul": "^0.4.5",
     "minimist": "^1.2.0",
     "mocha": "^5.1.0",
+    "prettier": "^1.15.3",
     "unexpected": "^11.0.0-4",
     "unexpected-documentation-site-generator": "^5.0.0",
     "unexpected-markdown": "^2.0.0"
