--- a/.eslintignore
+++ b/.eslintignore
@@ -1,6 +1,6 @@
 /testdata/
 /node_modules/
 /coverage/
--/test/documentation.spec.js
--/site-build/
+/test/documentation.spec.js
+/site-build/
 /.nyc_output/
