--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "test": "mocha ./documentation/**/*.md ./test/**/*.js && npm run lint",
-    "ci": "npm test && npm run coverage && npm run generate-site",
+    "test": "mocha ./documentation/**/*.md ./test/**/*.js",
+    "ci": "npm test && npm run lint && npm run coverage && npm run generate-site",
     "coverage": "NODE_ENV=development nyc --reporter=lcov --reporter=text --all -- npm test && echo google-chrome coverage/lcov-report/index.html",
     "generate-site": "generate-site --require ./bootstrap-unexpected-markdown.js && cp magic-pen-6-colours.jpg site-build && cp magic-pen-6-colours.jpg site-build/assertions/string/to-have-EXIF-data-satisfying/ && cp magic-pen-6-colours.jpg site-build/assertions/Buffer/to-have-EXIF-data-satisfying/",
     "update-examples": "generate-site --require ./bootstrap-unexpected-markdown.js --update-examples",
