--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: node_js
 node_js:
-  - "6"
-  - "8"
-  - "10"
-  - "node"
-script: "npm run ci"
+  - '8'
+  - '10'
+  - 'node'
+script: 'npm run ci'
 after_success: '<coverage/lcov.info ./node_modules/coveralls/bin/coveralls.js'
