--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "unexpected-markdown": "^5.0.0"
   },
   "scripts": {
-    "lint": "eslint . && prettier --check '**/*.{js,md}'",
+    "lint": "eslint . && prettier --check '**/*.{js,json,md}'",
     "test": "mocha ./documentation/**/*.md ./test/**/*.js",
     "test:ci": "npm run coverage && npm run generate-site",
     "coverage": "nyc --reporter=lcov --reporter=text --all -- npm test && echo google-chrome coverage/lcov-report/index.html",
