--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "magicpen-media": "^3.0.0"
   },
   "peerDependencies": {
-    "unexpected": "^10.0.0 || ^11.0.0-4 || ^12.0.0",
+    "unexpected": "^10.0.0 || ^11.0.0-4 || ^12.0.0 || ^13.0.0",
     "magicpen-media": "^1.5.0"
   },
   "devDependencies": {
@@ -25,7 +25,7 @@
     "nyc": "^15.0.0",
     "offline-github-changelog": "^1.7.0",
     "prettier": "~2.5.0",
-    "unexpected": "^12.0.0",
+    "unexpected": "^13.0.0",
     "unexpected-documentation-site-generator": "^7.1.0",
     "unexpected-markdown": "^5.0.0"
   },
